<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="mMenus" type="id" />
    <item name="mTaskName" type="id" />
    <item name="mDate" type="id" />
    <item name="mDescription" type="id" />
</resources>